# MCP_CodeAnalysis

./: .eslintrc.json  .gitignore  Cargo.toml  MCP_ENHANCEMENT_PLAN.md  MCP_MASTER_PLAN.md  README.md  SESSION_CONTINUATION_PROMPT.md  development_roadmap.md  end-of-session.json  knowledge_graph.json  monetization_analysis.json  monetization_status.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  redis-store-roadmap.md  session-goal.json  session-goal.json.bak  session-goal.json.template  session_continuation.sh  session_prompt.md  start-of-session.json  tsconfig.base.json  tsconfig.json
.cursor/: mcp.json
docs/: MCP_MASTER_PLAN.md  client-parameter-handling-spec.md  complexity-analyzer.md  dev-tools-guide.md  development-workflow.md  error-handler.md  mcp-client-library-spec.md  mcp-tools-guide.md  package-structure-standards.md  parameter-handler.md  plan.md  project-structure.md  refactoring-guidelines.md  session-goal-template.md  session-management.md  type-definitions-guidelines.md
src/: function_analysis.rs  lib.rs  main.rs  metrics.rs  tokenizer.rs
tools/complexity_analyzer/: .editorconfig  .gitattributes  Cargo.toml  README.md  test-output.json
tools/complexity_analyzer/src/: complexity.rs  function_analysis.rs  lib.rs  main.rs  tokenizer.rs  utils.rs
tools/complexity_analyzer/src/metrics/: cognitive.rs  cyclomatic.rs  halstead.rs  mod.rs
tools/complexity_analyzer/tests/: proptest_cognitive.proptest-regressions  proptest_cognitive.rs  proptest_complexity.rs  proptest_cyclomatic.proptest-regressions  proptest_cyclomatic.rs  proptest_halstead.rs
(+86 files in other folders)
